[metadata]
description-file = README.rst

[aliases]
release = register sdist bdist_wheel upload

[build]
force = 1

[bdist_wheel]
universal=1

[nosetests]
verbosity=0
with-doctest=1
# Use `pip install nose-exclude` 
# if nosetest fails with error: Error reading config file 'setup.cfg': no such option 'exclude-dir
exclude-dir=abipy/gui 
#with-coverage=1
#cover-package=abipy
#cover-erase=1
