[metadata]
description-file = README.rst

[aliases]
release = register sdist bdist_wheel upload

[build]
force = 1

[bdist_wheel]
universal=1

[nosetests]
verbosity=0
with-doctest=1
exclude-dir=abipy/gui 

[pycodestyle]
count = True
ignore = E116,E121,E123,E124,E126,E128,E131,E133,E226,E231,E241,E242,E261,E262,E265,E266,E401,E402,E704,W503,W504,W505,E701,E702,E731,E741,W605
max-line-length = 130
statistics = True
exclude=abipy/gui,abipy/abio/abivar_database,dev_scripts,docs,.ipynb_checkpoints
