[metadata]
description-file = README.rst

[aliases]
release = register sdist bdist_wheel upload

[build]
force = 1

[bdist_wheel]
universal=1

[tool:pytest]
ignore=abipy/gui
addopt=--cov-config=.coveragerc --cov=abipy -v --doctest-modules abipy  \
       --ignore=abipy/integration_tests --ignore=abipy/data/refs --ignore=abipy/scripts/ \
       --ignore=abipy/examples/plot --ignore=abipy/examples/flows --ignore=abipy/gui

#norecursedirs = scripts/post_processing _build* doxygen_docs tmp-robodoc .ipynb_checkpoints

#pytest -n 2 --cov-config=.coveragerc --cov=abipy -v --doctest-modules abipy \
#    --ignore=abipy/integration_tests --ignore=abipy/data/refs --ignore=abipy/scripts/ \
#    --ignore=abipy/examples/plot --ignore=abipy/examples/flows --ignore=abipy/gui 


[pycodestyle]
count = True
max-line-length = 130
statistics = True
ignore = E114,E116,E121,E122,E123,E124,E126,E127,E128,E129,E131,E133,E201,E203,E226,E231,E241,E242,E261,E262,E265,E266,E306,E401,E402,E704,W503,W504,W505,E701,E702,E731,E741,W605
exclude= .git,__pycache__,abipy/gui,abipy/abio/abivar_database,dev_scripts,docs,.ipynb_checkpoints,abipy/examples/flows/develop/,test_*.py,abipy/data/refs

[flake8]
# max-complexity = 10
max-line-length = 130
exclude= .git,__pycache__,abipy/gui,abipy/abio/abivar_database,dev_scripts,docs,.ipynb_checkpoints,abipy/examples/flows/develop/,test_*.py,abipy/benchmarks,abipy/data/refs,abilab.py
extend_ignore = E114,E116,E121,E122,E123,E124,E126,E127,E128,E129,E131,E133,E201,E203,E226,E231,E241,E242,E261,E262,E265,E266,E306,E401,E402,E704,W503,W504,W505,E701,E702,E731,E741,W605,F841

[pydocstyle]
ignore = D105,D107,D205
